--- a/NotasLoja/src/main/java/com/miguelefernando/notasloja/view/Painel_PerfilCliente.form
+++ b/NotasLoja/src/main/java/com/miguelefernando/notasloja/view/Painel_PerfilCliente.form
@@ -111,6 +111,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="voltar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbutton_voltarMouseClicked"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="10" y="393" width="150" height="50"/>
