--- a/NotasLoja/src/main/java/com/miguelefernando/notasloja/view/Painel_clientes.form
+++ b/NotasLoja/src/main/java/com/miguelefernando/notasloja/view/Painel_clientes.form
@@ -34,12 +34,19 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="153" max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="jbutton_visualizarCliente" min="-2" pref="51" max="-2" attributes="0"/>
@@ -49,7 +56,7 @@
                       <Component id="jbutton_CadastrarCliente" min="-2" pref="51" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jbutton_deletar_cliente1" min="-2" pref="51" max="-2" attributes="0"/>
-                      <EmptySpace pref="121" max="32767" attributes="0"/>
+                      <EmptySpace pref="52" max="32767" attributes="0"/>
                       <Component id="jbutton_voltar" min="-2" pref="51" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane1" max="32767" attributes="0"/>
@@ -100,6 +107,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Voltar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbutton_voltarMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbutton_procurarCliente">
       <Properties>
@@ -114,6 +124,14 @@
     <Component class="javax.swing.JButton" name="jbutton_deletar_cliente1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Deletar Cliente"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="48" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="BALULAK"/>
       </Properties>
     </Component>
   </SubComponents>
